--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.0
 Django==4.2.6
 django-cors-headers==4.3.0
+django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 dnspython==2.4.2
