--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,7 +6,7 @@ services:
     image: pereepl_app:v1
     command: python /apps/manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/code
+      - .:/apps
     ports:
       - "3951:8000"
     depends_on:
@@ -18,31 +18,10 @@ services:
     restart: always
     env_file:
       - ./.env.dev
+
     volumes:
       - pg_data:/var/lib/postgresql/data
-    ports:
-      - "5731:5432"
       
 volumes:
   pg_data:
     external: false
-
-
-
-# version: '3.9'
-# services:
-#   postgres_db:
-#     image: postgres:14
-#     container_name: pg_pereepl_db
-#     restart: always
-#     env_file:
-#       - .env
-#     volumes:
-#       - pg_data:/var/lib/postgresql/data
-#     ports:
-#       - "5731:5432"
-
-# volumes:
-#   pg_data:
-#     external: false
-    
