--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ drf-nested-routers==0.93.4
 email-validator==2.1.0.post1
 googlemaps==4.10.0
 idna==3.4
+Pillow==10.1.0
 psycopg2-binary==2.9.3
 pydantic==2.4.2
 pydantic_core==2.10.1
