--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,20 +1,22 @@
 version: "3.9"
 
 services:
-  # backend:
-  #   build: . 
-  #   image: pereepl_app:v1
-  #   command: python /apps/manage.py runserver 0.0.0.0:8000
-  #   volumes:
-  #     - .:/apps
-  #   ports:
-  #     - "8000:8000"
-  #   depends_on:
-  #     - db
+  backend:
+    build: . 
+    image: pereepl_application:v2
+    entrypoint: /apps/entrypoint.sh
+    env_file:
+      - ./.env
+    volumes:
+      - .:/apps
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
 
   db:
     image: postgres:14
-    container_name: backend_pereepl_pg_db
+    container_name: pereepl_backend
     restart: always
     env_file:
       - ./.env.dev
